Melhorias de layout, cores e textos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">CalculadoraImc</string>
+
+    <string name="title_imc">Calculadora IMC</string>
+    <string name="hint_weight">Peso</string>
+    <string name="label_height">Altura (cm)</string>
+
+    <string name="button_clear">Limpar</string>
+    <string name="button_calculate">Calcular</string>
 </resources>
