Controle de fluxo e tratamento de excecoes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <string name="button_clear">Limpar</string>
     <string name="button_calculate">Calcular</string>
+
+    <string name="msg_validation_height">Informe uma altura válida!</string>
+    <string name="msg_validation_weight">Informe um peso válido!</string>
 </resources>
